Fix adjacency check and clarify rules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </button>
     </header>
 
-    <p class="text-center mb-6 text-[var(--text-subtle)]">Place a queen in each row, column, and colored region.</p>
+    <p class="text-center mb-6 text-[var(--text-subtle)]">Place a queen in each row, column, and colored region without any two queens touching.</p>
 
     <div id="loading-overlay" class="absolute inset-0 flex-col justify-center items-center z-10 rounded-xl hidden">
         <div class="w-12 h-12 rounded-full animate-spin border-4 border-solid border-gray-300 border-t-blue-500"></div>
