Support up to 20x20 boards

--- a/index.html
+++ b/index.html
@@ -34,7 +34,27 @@
     <section class="mb-6 p-4 rounded-lg bg-[var(--surface-low)]">
         <div class="flex flex-wrap justify-center items-center gap-4">
             <label for="size" class="font-medium">Grid Size:</label>
-            <input id="size" type="range" min="4" max="12" value="8" class="w-36 cursor-pointer"/>
+            <select id="size" class="border rounded px-2 py-1 bg-[var(--surface)]">
+                <!-- Options from 4 to 20 -->
+                <!-- Default selected value is 8 -->
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8" selected>8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+            </select>
             <span id="size-val" class="font-semibold text-lg text-blue-600 w-8 text-center tabular-nums">8</span>
             <button id="generate" class="btn bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded-lg shadow-md font-semibold">New Puzzle</button>
             <button id="reset" class="btn bg-gray-700 hover:bg-gray-800 text-white px-5 py-2 rounded-lg shadow-md font-semibold">Reset</button>
