--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="text-center mb-6">
-        <button id="show-rules" class="underline text-blue-600 hover:text-blue-800">How to Play</button>
+        <button id="show-rules" class="btn px-4 py-2 rounded-lg bg-[var(--surface-low)] hover:bg-[var(--surface-high)] text-[var(--text-main)] font-medium">How to Play</button>
     </div>
 
     <div id="rules-overlay" class="fixed inset-0 hidden flex items-center justify-center z-20">
