Style Change_Grid and border lines make more distinct

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <section>
-        <div id="grid" class="grid gap-0 border-2 border-gray-300 mx-auto w-max rounded-md overflow-hidden shadow-inner"></div>
+        <div id="grid" class="grid gap-0 mx-auto w-max rounded-md overflow-hidden shadow-inner"></div>
         <div id="message" class="text-center text-lg mt-5 font-semibold h-8"></div>
         <div class="mt-4 flex justify-center">
             <button id="check" class="btn bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-lg shadow-md font-bold text-base hidden">Check Solution</button>
