--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <main class="max-w-2xl mx-auto game-container p-6 sm:p-8 rounded-xl shadow-lg">
 
     <header class="flex justify-between items-center mb-2">
-        <h1 class="text-3xl font-bold">The Queen's Puzzle</h1>
+        <h1 class="text-3xl font-bold">The Queen's Puzzle ( Vespy 🐱 ) </h1>
         <button id="theme-toggle" aria-label="Theme Button" class="text-2xl px-3 py-2 rounded-full hover:bg-black/10">
             <i class="fa-solid fa-circle-half-stroke theme-icon"></i>
         </button>
