--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Queen's Puzzle</title>
+    
+    <meta name="description" content="Play The Queen's Puzzle, a challenging twist on the classic N‑Queens game with unique colored regions." />
+    <meta name="keywords" content="queen puzzle,n queens,puzzle game,logic puzzle,brain teaser" />
+    <meta property="og:title" content="The Queen's Puzzle" />
+    <meta property="og:description" content="Solve this special variant of the N‑Queens puzzle where each colored region must contain exactly one queen." />
+    <meta property="og:image" content="thumbnail.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yginnovatory.com/queenpuzzle/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="icon" href="thumbnail.jpg" type="image/jpeg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
